fixing upd bulk read
